minor issue with output panel if the go-plus panel is vertically aligned; remove unnecessary border

--- a/styles/go-debug.less
+++ b/styles/go-debug.less
@@ -49,7 +49,6 @@ atom-text-editor {
   flex: 1;
   width: @go-debug-panel-size;
   position: relative;
-  border-left: 1px solid @tool-panel-border-color;
 }
 
 .go-debug-panel-resizer {
@@ -196,6 +195,14 @@ atom-text-editor {
     > * {
       display: block;
     }
+  }
+}
+.go-plus-panel.is-vertical .go-debug-output {
+  flex-direction: column;
+
+  .buttons {
+    border-right: 0;
+    border-bottom: 1px solid @base-border-color;
   }
 }
 
